--- a/frontend/src/components/Workouts.css
+++ b/frontend/src/components/Workouts.css
@@ -25,6 +25,10 @@ body {
     color: #fff;
 }
 
+.stretch {
+    margin-top: 30px;
+}
+
 a:hover {
     color: #000;
 }
